Whitespace now fills all page. OCD fixed.

--- a/webapp/app/styles/styles.css
+++ b/webapp/app/styles/styles.css
@@ -1,4 +1,12 @@
 /*    --------------------------------------------------
+	:: Main Section
+	-------------------------------------------------- */
+div#page-wrapper {
+  min-height: 95vh;
+  background-color: #ffffff;
+}
+
+/*    --------------------------------------------------
 	:: Login Section
 	-------------------------------------------------- */
 #login {
